plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.15'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id "org.beryx.jlink" version "3.1.1"
    id 'com.gradleup.shadow' version '8.3.5'
}

repositories {
    mavenCentral()
}

group = 'com.starwars'
version = '1.0'
description = 'swapij'
java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility = JavaVersion.VERSION_21

dependencies {
    implementation 'org.openjfx:javafx-fxml:21'
    implementation 'org.openjfx:javafx-controls:21'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}

javadoc {
    source = sourceSets.main.allJava
    destinationDir = layout.buildDirectory.dir("docs/javadoc").get().asFile
}

javafx {
    version = 21
    modules = ['javafx.controls', 'javafx.fxml']
}

application {
    mainClass = 'com.starwars.swapij.MainLauncher'
    mainModule = 'com.starwars.swapij'
}

jar {
    manifest {
        attributes  'Main-Class': 'com.starwars.swapij.MainLauncher',
                'Module-Name': 'com.starwars.swapij'
    }
}

jlink {
    options = [
            '--strip-debug',
            '--compress', '1',
            '--no-header-files',
            '--no-man-pages',
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
    launcher {
        name = 'swapij'
    }

    forceMerge('log4j-api')

    jpackage {
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
            imageOptions += ['--win-console']
        }
        if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
            installerOptions += ['--mac-package-identifier', 'com.starwars.swapij']
            imageOptions += ['--mac-package-name', 'swapij']
        }
        if (org.gradle.internal.os.OperatingSystem.current().linux) {
            installerOptions += ['--linux-package-name', 'swapij']
            imageOptions += ['--linux-package-name', 'swapij']
        }
    }

    shadowJar {
        archiveBaseName = 'swapij'
        archiveVersion = '0.1.0'
        manifest {
            attributes(
                    'Main-Class': 'com.starwars.swapij.MainLauncher',
                    'Module-Name': 'com.starwars.swapij'
            )
        }
    }


}
